bk_ida/gccida/g1/dump_global_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_global_regs/src/global.c:2463:16: error: use of undeclared identifier 'off_6376D2'
fprintf( file, off_6376D2, ( unsigned int)i); 
               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_global_regs/src/obj/global.o] Error 1
